# UsageOS

./: .env.example  .gitignore  DEPLOY.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_schema.py  002_add_telegram_chat_id_and_notification_log.py  003_add_notification_type.py  004_add_avatar_url.py  9d943a576938_add_account_nickname_color_notes_tables.py
backend/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py  telegram.py
backend/app/routers/: accounts.py  dashboard.py  history.py  maintenance.py  notes.py  notifications.py  sync.py  telegram_webhook.py
backend/app/services/: notifications.py  scheduler.py
extension/: PRIVACY.md  README.md  background.js  dashboard.html  dashboard.js  default-config.json  manifest.json  manifest_chrome.json  manifest_electron.json  manifest_firefox.json  options.html  options.js  popup.html  popup.js  tracker-styles.css
extension/bg-components/: atlasSync.js  claude-api.js
extension/content-components/: content_utils.js  localization.js  notification_card.js  ui_dataclasses.js  usage_ui.js
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AccountCard.tsx  AvatarUpload.tsx  ColorPicker.tsx  CountdownTimer.tsx  EditableNickname.tsx  Header.tsx  HistoryChart.tsx  MaintenanceNotes.tsx  NoteEditor.tsx  NotesTextarea.tsx  (+5 more)
(+6 files in other folders)
